Fixed css to avoid the token value to overlap the message

--- a/src/containers/Chat/Chat.scss
+++ b/src/containers/Chat/Chat.scss
@@ -331,7 +331,7 @@ $messages-block-radius: 15px;
 			}
 			&-abt {
 				position: absolute;
-				right: -40px;
+				// right: -40px;
 				bottom: -30px;
 			}
 		}
